# label_customizer

./: .gitignore  BUILD_ISSUE_FIXED.md  DEPLOYMENT_READY.md  FINAL_FIX.md  FRAPPE_CLOUD_READY.md  FRAPPE_PAGE_COMPLETE.md  ISSUE_RESOLVED.md  MANIFEST.in  README.md  SETUP_COMPLETE.md  license.txt  pyproject.toml  requirements.txt  setup.py
label_customizer/: hooks.py  modules.txt  patches.txt
label_customizer/label_customizer/: __init__.py
label_customizer/label_customizer/page/general_ledger_custom/: general_ledger_custom.html  general_ledger_custom.js  general_ledger_custom.json  general_ledger_custom.py
label_customizer/page/general_ledger_custom/: __init__.py
label_customizer/public/: README.md  build.json
label_customizer/public/js/: general_ledger_autoload.js  general_ledger_custom.js  general_ledger_label.js
