[project]
name = "label_customizer"
version = "0.0.1"
description = "Customize labels in ERPNext reports"
authors = [
    { name = "Infoney", email = "info@infoney.com" }
]
dependencies = [
    "frappe",
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench]
dev-dependencies = []

